kubernetes/static/006-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: marketing-demo-environment-fe
  labels:
    app.kubernetes.io/name: marketing-demo-environment-fe
    app.kubernetes.io/instance: develop
    app.kubernetes.io/group: marketing
    app.kubernetes.io/version: "7.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: marketing-demo-environment-fe
      app.kubernetes.io/instance: marketing-demo-environment-fe-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: marketing-demo-environment-fe
        app.kubernetes.io/instance: marketing-demo-environment-fe-dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "81"
        prometheus.io/path: "/"
    spec:
      serviceAccountName: marketing-demo-environment-fe
      containers:
        - name: marketing-demo-environment-fe
          image: 238840573801.dkr.ecr.eu-central-1.amazonaws.com/evam-demo-environment-fe:develop
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          ports:
            - containerPort: 81
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.js
              readOnly: false
              subPath: config.js
          livenessProbe:
            httpGet:
              port: 81
              path: /
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 81
              path: /
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
      volumes:
        - name: config-volume
          configMap:
            name: marketing-demo-environment-fe-config
