kubernetes/static/005-service.yml
apiVersion: v1
kind: Service
metadata:
  name: marketing-demo-environment-fe
  labels:
    app.kubernetes.io/name: marketing-demo-environment-fe
    app.kubernetes.io/instance: marketing-demo-environment-fe-dev
    app.kubernetes.io/group: marketing
    app.kubernetes.io/version: "7.1"
spec:
  ports:
    - port: 81
      protocol: TCP
  selector:
    app.kubernetes.io/name: marketing-demo-environment-fe
    app.kubernetes.io/instance: marketing-demo-environment-fe-dev
